--- a/core/app/views/ProcureUnits/_unit_list_v3.html
+++ b/core/app/views/ProcureUnits/_unit_list_v3.html
@@ -186,9 +186,10 @@
 
   <tr id="${tr_key}_${unit.id}" style="display:none;">
     <td colspan="${checkbox ? '23' : '21'}" style="background-color:#F0F0F0;">
+      
       <div class="col-md-3">
         <div class="box box-warning">
-          <div class="box-header with-border"><h3 class="box-title">Comment</h3></div>
+          <div class="box-header with-border"><h3 class="box-title">Comment【所属项目:${unit.projectName}】</h3></div>
           <div class="box-body">${unit.comment}</div>
         </div>
       </div>
