* 增加同步退款订单job調用

--- a/core/app/views/Jrockends/index.html
+++ b/core/app/views/Jrockends/index.html
@@ -183,6 +183,17 @@
                                data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a>
                         </td>
                     </tr>
+
+                  <tr>
+                      <td>amazonRefundOrderrSync</td>
+                      <td>report同步退款订单数据</td>
+                      <td> 0 0 0 * * SUN</td>
+                      <td>_GET_FBA_FULFILLMENT_CUSTOMER_RETURNS_DATA_</td>
+                      <td></td>
+                      <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="amazonRefundOrderrSync"
+                             data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a>
+                      </td>
+                  </tr>
                 </table>
             </div>
 
