--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -51,7 +51,7 @@
             </div>
             <label for="subtitle_input" class="col-sm-1 control-label">CreateDate</label>
             <div class="col-sm-2">
-              <input type="text" readonly class="form-control" name="dmt.createDate" value="${dmt.createDate.datetime()}">
+              <input type="text" readonly class="form-control" value="${dmt.createDate.datetime()}">
             </div>
             <label for="p_sku" class="col-sm-1 control-label">Creator</label>
             <div class="col-sm-2">
