出货单解除按钮无反应

--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -108,7 +108,8 @@
                   <div class="box-footer">
                   #{power.ck "products.edit"}
                     <a href="javascript:void(0);" data-url='@{DeliverPlans.delunits(dp.id)}' data-method="DELETE"
-                       id="delunit_form_submit" data-toggle="tooltip" data-placement="right" title="将 DELIVERY 状态的采购计划从采购单中移除出去" placement="right"
+                       id="del_unit_form_submit" data-toggle="tooltip" data-placement="right" title="将 DELIVERY
+                       状态的采购计划从采购单中移除出去" placement="right"
                        class="btn btn-danger">
                       解除
                     </a>
