--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -81,7 +81,7 @@
                 </div>
               </div>
 
-              <div class="box box-warning collapsed-box box-solid">
+              <div class="box collapsed-box">
                 <div class="box-header with-border">
                   <h3 class="box-title" data-toggle="toggle" data-target="#tl">
                     Timeline <i class="icon-reorder"></i>
@@ -99,7 +99,7 @@
               </div>
 
               <form action="#" id="bulkpost" method="POST" class="form-horizontal">
-                <div class="box box-success box-solid">
+                <div class="box">
                   <div class="box-header with-border"><h3 class="box-title">已经添加进入[出货单]的[采购单元]</h3></div>
                   <div class="box-body">
                   #{render 'ProcureUnits/_unit_list_v3.html', units:dp.units, checkbox:true,
@@ -129,7 +129,7 @@
 
             #{if showAdd}
                 #{form @DeliverPlans.addunits(dp.id), method: 'POST'}
-                  <div class="box box-primary box-solid">
+                  <div class="box">
                     <div class="box-header with-border"><h3 class="box-title">可添加进入[出货单]的[采购单元]</h3></div>
                     <div class="box-body">
                         #{render 'ProcureUnits/_unit_list_v3.html', units:plan_units, checkbox:true, key:'plan',deliveryplan:true/}
