解除selling和listing的关系

--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -2,7 +2,7 @@
 * ProcueUnit: unit
 * Whouse: whouses
 }*
-#{set product: unit.selling.listing.product/}
+#{set product: unit.selling.product/}
 #{set copers:product.cooperators() /}
 
 <div class="form-group">
