* 新增 _GET_AMAZON_FULFILLED_SHIPMENTS_DATA_ 报表调用

--- a/core/app/views/Jrockends/index.html
+++ b/core/app/views/Jrockends/index.html
@@ -205,6 +205,17 @@
                    data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a>
             </td>
           </tr>
+
+          <tr>
+            <td>amazonFulfilledOrderrSync</td>
+            <td>report同步运输订单</td>
+            <td>每30分钟执行</td>
+            <td></td>
+            <td></td>
+            <td><a href="javascript:void(0)" name="unitUpdateBtn" data-job="amazonFulfilledOrderrSync"
+                   data-confirm="确认运行?" class="btn btn-xs btn-danger">运行</a>
+            </td>
+          </tr>
         </table>
       </div>
 
