分拆时，修改金额的权限

--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -40,19 +40,16 @@
     <select name="unit.cooperator.id" class="form-control" required>
       <option value="">供应商</option>
     #{list items:copers, as:'c'}
-      <option value="${c.id}" #{if c.id == unit.cooperator?.id}selected#{/if}>${c.name}</option>
+      <option value="${c.id}" #{if c.id == unit.cooperator?.id} selected #{/if}>${c.name}</option>
     #{/list}
     </select>
     <span style="width:200px;display:${unit.period?: 'none'}" id="unit_period">（生产周期：${unit.period}天）</span>
   </div>
   <label for="unit_price" class="col-sm-1 control-label">单价</label>
   <div class="col-sm-2 form-inline">
-    <input type="text" class="form-control" id="unit_price" name="unit.attrs.price" value="${unit.attrs.price}">
+    <input type="text" class="form-control" id="unit_price" name="unit.attrs.price" value="${unit.attrs.price}"
+           #{if !isEdit} readonly #{/if}/>
   #{pickCurrency id:'unit_currency', name:'unit.attrs.currency',class:'form-control', c:unit.attrs.currency?:helper.Currency.CNY /}
-  #{power.ck "cooperitem.price"}
-    <!-- ea系统关闭个人价格更新权限，仅有指定角色可进行更改 -->
-    <input type="hidden" id="priceFlag" value="1">
-  #{/power.ck}
   </div>
   <label for="unit_price" class="col-sm-1 control-label">是否含税</label>
   <div class="col-sm-2 form-inline">
